<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ch.epfl.sweng.calamar.item.CreateItemActivity">

    <TextView
        android:id="@+id/activityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="12dp"
        android:paddingBottom="6dp"
        android:paddingEnd="0dp"
        android:paddingLeft="12dp"
        android:paddingRight="0dp"
        android:paddingTop="12dp"
        android:singleLine="false"
        android:text="@string/create_new_item_title"
        android:textSize="24sp" />

    <View
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activityTitle"
        android:background="#000000"
        android:paddingBottom="10dp"
        android:paddingTop="0dp" />

    <EditText
        android:id="@+id/createItemActivity_messageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/line"
        android:hint="@string/new_item_text_hint"
        android:inputType="text|textMultiLine" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/createItemActivity_messageText"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/selectFileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="0dp"
            android:text="@string/select_file_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/selectFileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startFilePicker"
            android:text="@string/select_button_text" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/privateCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:checked="false"
        android:onClick="privateChecked"
        android:text="@string/private_checkbutton_text" />

    <Spinner
        android:id="@+id/contactSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_toEndOf="@+id/privateCheck"
        android:layout_toRightOf="@+id/privateCheck"
        android:spinnerMode="dropdown" />

    <CheckBox
        android:id="@+id/locationCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/contactSpinner"
        android:checked="false"
        android:onClick="locationChecked"
        android:text="@string/location_checkbutton_text" />

    <!--
    <CheckBox
        android:id="@+id/timeCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/locationCheck"
        android:checked="false"
        android:onClick="timeChecked"
        android:text="@string/time_checkbutton_text" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeCheck"
        android:layout_toEndOf="@+id/timeCheck"
        android:layout_toRightOf="@+id/timeCheck"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/timeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/tillRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/till_radiobutton_text" />

            <RadioButton
                android:id="@+id/atRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/at_radiobutton_text" />
        </RadioGroup>

    </LinearLayout>

    -->
    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/contactSpinner"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/contactSpinner"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/create_button_text" />

    <ProgressBar
        android:id="@+id/locationProgressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contactSpinner"
        android:layout_toEndOf="@+id/locationCheck"
        android:layout_toRightOf="@+id/locationCheck"
        android:indeterminate="false"
        android:max="10"
        android:visibility="invisible" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendProgressBar"
        android:layout_alignBottom="@+id/createButton"
        android:layout_alignRight="@+id/createButton"
        android:layout_alignEnd="@+id/createButton"
        android:visibility="invisible" />


</RelativeLayout>
