<resources>

    <!-- Misc -->
    <string name="app_name">Calamar</string>
    <string name="application_null">Application is null</string>
    <string name="alert_dialog_default_positive_button">OK</string>

    <!-- Recipient -->
    <string name="recipient">Her/Him</string>
    <string name="field_users_null">Field \'users\' cannot be null</string>
    <string name="field_name_null">Field \'name\' cannot be null</string>
    <string name="unexpected_recipient_type">Unexpected Recipient type : %s</string>
...
    <string name="item_map_no_location">Ecublens we have a problem : item on map hasn\'t any location</string>
    <string name="refreshtask_visibleregion_or_context_null">RefreshTask: visibleRegion or context is null</string>
    <string name="map_refreshed">Map refreshed</string>

    <!-- create item -->
    <string name="title_activity_create_item">CreateItemActivity</string>
    <string name="create_new_item_title">Create a new item</string>
    <string name="new_item_text_hint">Enter a message (optional)</string>
    <string name="select_button_text">Browse…</string>
    <string name="select_file_text">File :</string>
    <string name="location_checkbutton_text">location</string>
    <string name="private_checkbutton_text">private</string>
    <string name="create_button_text">Create</string>
    <string name="item_create_invalid">An item must either have a text, a file, or both.</string>
    <string name="item_sent_successful">Item sent</string>
    <string name="select_local_file">Please select a local file</string>
    <string name="choose_file">Choose a file</string>
    <string name="select_file_title">"Complete action using "</string>
    <string name="unable_to_create_item">Unable to create and send item</string>
    <string name="public_without_condition">A public item must have a location.</string>

    <!-- Items view -->
    <string name="item_is_locked_getview">You have to fill the conditions to see the message !</string>
    <string name="item_details_conditions_title">Condition(s)</string>
    <string name="item_details_preview_title">Preview</string>
    <string name="item_details_from">From :</string>
...
